js/js.translator/testData/incremental/invalidation/multiPlatformClashFileNames/lib1/common/l1.0.kt
inline fun commonFun() = 0
